# productivity

./: .env.example  .gitignore  README.md  SETUP.md  bootstrap.ps1  bootstrap.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
scripts/: build-docker.sh  smoke_test.py
tests/: test_smoke.py
